# tagqt

./: .gitignore  CMakeLists.txt  COMPARISON.md  FINAL_STATUS.md  INVESTIGATION_SUMMARY.md  LICENSE  PROJECT_SUMMARY.md  README.md  README.md.save  README_CPP.md  build.sh  main.py  requirements.txt  tagfix.py
.github/: README.md
.github/workflows/: release.yml
flutter_app/: build_linux.sh  download_ffmpeg.sh  pubspec.yaml
flutter_app/lib/: main.dart
flutter_app/lib/models/: audio_file.dart  directory_item.dart
flutter_app/lib/providers/: app_state.dart
flutter_app/lib/screens/: main_screen.dart
flutter_app/lib/services/: cover_service.dart  ffmpeg_manager.dart  ffmpeg_service.dart  file_service.dart  image_service.dart  lyrics_service.dart  musicbrainz_service.dart  romanization_manager.dart  romanization_service.dart  tag_service.dart
flutter_app/lib/theme/: app_theme.dart
flutter_app/lib/widgets/: breadcrumb_widget.dart  cover_art_widget.dart  cover_search_dialog.dart  editor_panel.dart  file_list.dart  lyrics_edit_dialog.dart  lyrics_search_dialog.dart  lyrics_widget.dart
flutter_app/scripts/: romanize.py
flutter_app/windows/: CMakeLists.txt
src/: main.cpp
src/core/: AudioHandler.cpp  AudioHandler.h  ConfigManager.cpp  ConfigManager.h  MetadataHandler.cpp  MetadataHandler.h
src/gui/: BrowserPanel.cpp  BrowserPanel.h  EditorPanel.cpp  EditorPanel.h  MainWindow.cpp  MainWindow.h  TrackTable.cpp  TrackTable.h
tagqt/core/: flac.py  lyric.py  musicbrainz.py  rename.py  settings.py  snapshot.py  tags.py
tagqt/ui/: batch_status.py  dialogs.py  help.py  main.py  palette.py  player.py  rename.py  results.py  search.py  side.py  theme.py  toast.py  tracks.py  workers.py
(+12 files in other folders)
